@@ -25,9 +25,10 @@ from typing import Dict, Any
 from xdcc_dl.xdcc import download_packs
 from xdcc_dl.pack_search.SearchEngine import SearchEngineType, SearchEngine
 from puffotter.prompt import prompt
-from toktokkie.renaming import Renamer, RenameOperation
+from toktokkie.renaming.Renamer import Renamer
+from toktokkie.renaming.RenameOperation import RenameOperation
 from toktokkie.metadata.types.TvSeries import TvSeries
-from toktokkie.metadata.components.TvSeason import TvSeason
+from toktokkie.metadata.types.components.TvSeason import TvSeason
 from toktokkie.xdcc_update.enums import Resolution
 from toktokkie.exceptions import MissingXDCCInstructions, \
     InvalidXDCCInstructions
