@@ -1,6 +1,8 @@
 V 0.19.0:
   - Uses more puffotter convenience functions
   - Adjusted to new xdcc-dl paradigms
+  - Major refactor of metadata structure
+  - Uses json schema to validate metadata
 V 0.18.0:
   - Redid metadata to be more minimalistic and easier to maintain
   - Substituted verification for Checkers
